--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -25,8 +25,10 @@ MultipleInstanceLastWidth=600
 MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
+MultipleInstancePositions=(X=0,Y=512)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 PlayNumberOfClients=2
+PlayNetDedicated=True
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -48,7 +50,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.22-18.36.25
+CoopGame.TimeStamp=2020.04.22-20.55.09
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2935,7 +2937,7 @@ BP_TestGameMode_C.GameMode=True
 REINST_BP_PlayerPawn_C_35.None=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3184,9 +3186,9 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/UI/WBP_AmmoInfo
-MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem0=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/UI/WBP_AmmoInfo
 MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
 MRUItem4=/Game/Blueprints/GameModes/BP_TestGameMode
 MRUItem5=/Game/UI/WBP_SimpleCrosshair
