--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,8 +26,8 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 PlayNumberOfClients=2
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -49,7 +49,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.23-16.39.50
+CoopGame.TimeStamp=2020.04.23-19.00.13
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2936,7 +2936,7 @@ BP_TestGameMode_C.GameMode=True
 REINST_BP_PlayerPawn_C_35.None=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -2969,7 +2969,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3107,9 +3107,9 @@ SphereComponent=SphereComponent.Collision.Collision,
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SCharacter=
+Character=
+Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -3125,7 +3125,7 @@ SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bo
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3185,17 +3185,17 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem2=/Game/UI/WBP_AmmoInfo
-MRUItem3=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem4=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem5=/Game/UI/WBP_SimpleCrosshair
-MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem7=/Game/Materials/M_ExplosiveBarrel
-MRUItem8=/Game/Materials/SM_ExplosiveBarrel
-MRUItem9=/Game/UI/M_HealthIndicator
-MRUItem10=/Game/UI/WBP_HealthIndicator
+MRUItem0=/Game/UI/WBP_AmmoInfo
+MRUItem1=/Game/UI/WBP_HealthIndicator
+MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem3=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem5=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem6=/Game/UI/WBP_SimpleCrosshair
+MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem8=/Game/Materials/M_ExplosiveBarrel
+MRUItem9=/Game/Materials/SM_ExplosiveBarrel
+MRUItem10=/Game/UI/M_HealthIndicator
 MRUItem11=/Game/UI/T_HealthMask
 MRUItem12=/Game/lessCineMat
 MRUItem13=/Game/NewMaterialInstanceConstant
@@ -3249,6 +3249,7 @@ MRUItem19=/Game/AnimStarterPack/Death_1
 /Game/Materials/SM_ExplosiveBarrel.SM_ExplosiveBarrel=0
 /Game/Materials/M_ExplosiveBarrel.M_ExplosiveBarrel=0
 /Game/Blueprints/Weapons/BP_Rifle.BP_Rifle=0
+/Game/UI/WBP_HealthIndicator.WBP_HealthIndicator=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
