improved Barrel explosion replication.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.23-19.03.06
+CoopGame.TimeStamp=2020.04.23-19.28.34
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2937,7 +2937,7 @@ BP_TestGameMode_C.GameMode=True
 REINST_BP_PlayerPawn_C_35.None=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
