grenade projectile now spawns effects on all clients and server.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -28,7 +28,6 @@ MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 PlayNumberOfClients=2
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNetDedicated=True
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -50,7 +49,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.23-20.27.06
+CoopGame.TimeStamp=2020.04.23-23.27.30
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3188,26 +3187,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/UI/WBP_AmmoInfo
-MRUItem2=/Game/UI/WBP_HealthIndicator
-MRUItem3=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem4=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem5=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem6=/Game/UI/WBP_SimpleCrosshair
-MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem8=/Game/Materials/M_ExplosiveBarrel
-MRUItem9=/Game/Materials/SM_ExplosiveBarrel
-MRUItem10=/Game/UI/M_HealthIndicator
-MRUItem11=/Game/UI/T_HealthMask
-MRUItem12=/Game/lessCineMat
-MRUItem13=/Game/NewMaterialInstanceConstant
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem15=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem16=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem18=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem19=/Game/AnimStarterPack/Death_1
+MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem2=/Game/UI/WBP_AmmoInfo
+MRUItem3=/Game/UI/WBP_HealthIndicator
+MRUItem4=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem6=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem7=/Game/UI/WBP_SimpleCrosshair
+MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem9=/Game/Materials/M_ExplosiveBarrel
+MRUItem10=/Game/Materials/SM_ExplosiveBarrel
+MRUItem11=/Game/UI/M_HealthIndicator
+MRUItem12=/Game/UI/T_HealthMask
+MRUItem13=/Game/lessCineMat
+MRUItem14=/Game/NewMaterialInstanceConstant
+MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem16=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem17=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem18=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem19=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3253,6 +3252,7 @@ MRUItem19=/Game/AnimStarterPack/Death_1
 /Game/Materials/M_ExplosiveBarrel.M_ExplosiveBarrel=0
 /Game/Blueprints/Weapons/BP_Rifle.BP_Rifle=0
 /Game/UI/WBP_HealthIndicator.WBP_HealthIndicator=0
+/Game/Blueprints/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
