health component wasn't upadting current health properly on begin play.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -28,6 +28,7 @@ MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 PlayNumberOfClients=2
 LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNetDedicated=True
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -49,7 +50,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.23-23.32.06
+CoopGame.TimeStamp=2020.04.23-23.54.31
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2934,9 +2935,22 @@ BP_TestGameMode_C.Classes=True
 BP_TestGameMode_C.Game=True
 BP_TestGameMode_C.GameMode=True
 REINST_BP_PlayerPawn_C_35.None=True
+REINST_BP_GrenadeProjectile_C_35.Variable=True
+REINST_BP_GrenadeProjectile_C_35.TransformCommon=True
+REINST_BP_GrenadeProjectile_C_35.Sockets=True
+REINST_BP_GrenadeProjectile_C_35.Shape=True
+REINST_BP_GrenadeProjectile_C_35.Navigation=True
+REINST_BP_GrenadeProjectile_C_35.Physics=True
+REINST_BP_GrenadeProjectile_C_35.Collision=True
+REINST_BP_GrenadeProjectile_C_35.Tags=True
+REINST_BP_GrenadeProjectile_C_35.ComponentReplication=True
+REINST_BP_GrenadeProjectile_C_35.Cooking=True
+REINST_BP_GrenadeProjectile_C_35.Events=True
+REINST_BP_GrenadeProjectile_C_39.Sockets=True
+REINST_BP_GrenadeProjectile_C_39.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3155,8 +3169,8 @@ Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Obje
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
-BP_ExplosiveBarrel_C=
-SExplosiveBarrel=
+BP_ExplosiveBarrel_C="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SExplosiveBarrel="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_ExplosiveBarrel_C_33=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
@@ -3171,6 +3185,7 @@ REINST_BP_PlayerPawn_C_35="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_39="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_43="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_48="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_ExplosiveBarrel_C_35="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -3187,15 +3202,15 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
 MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/UI/WBP_AmmoInfo
-MRUItem3=/Game/UI/WBP_HealthIndicator
-MRUItem4=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem5=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem6=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem7=/Game/UI/WBP_SimpleCrosshair
-MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem2=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem3=/Game/UI/WBP_AmmoInfo
+MRUItem4=/Game/UI/WBP_HealthIndicator
+MRUItem5=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem6=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem7=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem8=/Game/UI/WBP_SimpleCrosshair
 MRUItem9=/Game/Materials/M_ExplosiveBarrel
 MRUItem10=/Game/Materials/SM_ExplosiveBarrel
 MRUItem11=/Game/UI/M_HealthIndicator
