pulsing material logic set in blueprint.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.24-19.56.43
+CoopGame.TimeStamp=2020.04.24-20.19.36
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3058,6 +3058,11 @@ REINST_BP_TrackerBot_C_35.Rendering=True
 REINST_BP_TrackerBot_C_35.Replication=True
 REINST_BP_TrackerBot_C_35.Input=True
 REINST_BP_TrackerBot_C_35.Actor=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionOneMinus.MaterialExpression=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3094,7 +3099,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AI
+ContentBrowserTab1.SelectedPaths=/Engine/EngineMaterials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3305,9 +3310,10 @@ STrackerBot=
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpression=
 REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
+MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3326,26 +3332,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem1=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem2=/Game/Meshes/SM_TrackerBot
-MRUItem3=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem4=/Game/UI/WBP_HealthIndicator
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem7=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem8=/Game/UI/WBP_AmmoInfo
-MRUItem9=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem10=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem11=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem12=/Game/UI/WBP_SimpleCrosshair
-MRUItem13=/Game/Materials/M_ExplosiveBarrel
-MRUItem14=/Game/Materials/SM_ExplosiveBarrel
-MRUItem15=/Game/UI/M_HealthIndicator
-MRUItem16=/Game/UI/T_HealthMask
-MRUItem17=/Game/lessCineMat
-MRUItem18=/Game/NewMaterialInstanceConstant
-MRUItem19=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem0=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem1=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem2=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem3=/Game/Meshes/SM_TrackerBot
+MRUItem4=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem5=/Game/UI/WBP_HealthIndicator
+MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem8=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem9=/Game/UI/WBP_AmmoInfo
+MRUItem10=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem11=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem12=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem13=/Game/UI/WBP_SimpleCrosshair
+MRUItem14=/Game/Materials/M_ExplosiveBarrel
+MRUItem15=/Game/Materials/SM_ExplosiveBarrel
+MRUItem16=/Game/UI/M_HealthIndicator
+MRUItem17=/Game/UI/T_HealthMask
+MRUItem18=/Game/lessCineMat
+MRUItem19=/Game/NewMaterialInstanceConstant
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3393,6 +3399,7 @@ MRUItem19=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
 /Game/UI/WBP_HealthIndicator.WBP_HealthIndicator=0
 /Game/Blueprints/Projectiles/BP_GrenadeProjectile.BP_GrenadeProjectile=0
 /Game/Meshes/ArcadeEditorSphereScaled.ArcadeEditorSphereScaled=0
+/Engine/EngineMaterials/T_Default_Material_Grid_M.T_Default_Material_Grid_M=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
